--- a/style.css
+++ b/style.css
@@ -14,3 +14,21 @@ body {
 h1 {
     font-family: "caprasimo";
 }
+
+#spotify-btn {
+    font-family: sans-serif;
+    /* background-color: #1DB954; */
+    font-size: 27px;
+}
+
+#spotify-btn p {
+    padding: 20px 0;
+}
+
+img {
+    width: 19%;
+    float: left;
+    padding-right: 2px;
+    padding-top: 5px;
+
+}
