--- a/style.css
+++ b/style.css
@@ -45,3 +45,9 @@ img {
     width: 100%;
     bottom: 0px;
 }
+
+#search-results-template {
+    margin: auto;
+    margin-top: 5px;
+    border-image: linear-gradient(to right, #ec4899, #f97316) 1;
+}
