--- a/style.css
+++ b/style.css
@@ -55,3 +55,67 @@ img {
 [hidden] {
     display: none !important;
 }
+
+
+
+/* Loader taken and modified from https://cssloaders.github.io */
+.loader {
+    width: 8px;
+    height: 40px;
+    border-radius: 4px;
+    display: inline-block;
+    margin-top: 10px;
+    position: relative;
+    background: currentColor;
+    color: #f36051;
+    box-sizing: border-box;
+    animation: animloader 0.3s 0.1s cubic-bezier(0.6, -0.05, 0.66, 0.78) infinite alternate;
+  }
+  .loader::after {
+    color: #f97316; 
+    content: '';  
+    box-sizing: border-box;
+    width: 8px;
+    height: 40px;
+    border-radius: 4px;
+    background: currentColor;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    animation: animloader1 0.3s 0.2s cubic-bezier(0.6, -0.05, 0.66, 0.78) infinite alternate;
+  }
+  .loader::before {
+    left: -20px;
+    animation-delay: 0s;
+    color: #ec4899;
+    content: '';  
+    box-sizing: border-box;
+    width: 8px;
+    height: 40px;
+    border-radius: 4px;
+    background: currentColor;
+    position: absolute;
+    bottom: 0;
+    animation: animloader1 0.3s 0.0s cubic-bezier(0.6, -0.05, 0.66, 0.78) infinite alternate;
+  }
+
+  @keyframes animloader {
+    0% {
+      height: 40px;
+      transform: translateY(0);
+    }
+    100% {
+      height: 10px;
+      transform: translateY(30px);
+    }
+  }
+  
+  @keyframes animloader1 {
+    0% {
+      height: 48px;
+    }
+    100% {
+      height: 4.8px;
+    }
+  }
+      
